2016-11-30  Rudolf Hornig

	* The updated build system now uses the ./configure file only to detect
	certain flags and libraries. Most of the build logic is handled by the
	Makefile.inc file itslef. This allows you to enable/disable optional
	components (i.e. Tkenv,Qtenv,OSG and osgEarth support) without even
	re-running the ./configure file.

2016-08-23  Andras Varga

	* MsgCppGenerator: follow sim.kernel change: info() renamed to str()

2016-07-12  Andras Varga

	* MsgCppGenerator: follow sim.kernel change: generate
	getFieldDynamicTypeString() method into cClassDescriptors

2016-07-18  Andras Varga

	* msg grammar: remove support for old (3.x) format;
	"properties" and "fields" are no longer keywords

2016-07-12  Andras Varga

	* MsgCppGenerator: some internal cleanup

2016-07-12  Andras Varga

	* msg files: allow generating descriptors for existing inner classes.
	Syntax example: class cComponent::SignalData {... }

2016-06-23  Rudolf Hornig

	* The makefile now uses compiler-generated dependency files.

2016-04-13  ------ omnetpp-5.0 released ------

2016-04-01  Andras Varga

	* Edited comments to improve the generated C++ documentation (doxygen)

2016-03-31  Andras Varga

	* opp_msgc (MsgCppGenerator class):
	- fix: simtime_t was converted to/from string via double
	- fix: simtime_t must be qualified with omnetpp::

2016-03-10  ------ omnetpp-5.0rc released ------

2015-12-07  ------ omnetpp-5.0b3 released ------

2015-10-16  Andras Varga

	* omnetpp namespace made permanent (cannot be turned off):
	- removed configure option and preprocessor symbol USE_NAMESPACE
	- removed related macros: NAMESPACE_BEGIN, NAMESPACE_END,
	  USING_NAMESPACE, OPP, OPP_STR, OPP_PREFIX etc.

2015-08-10  Andras Varga

	* nedyylib.cc: more careful parsing of quoted strings in property
	values (results in less exceptions)

2015-08-06  Andras Varga

	* MsgCppGenerator: more flexible syntax for @getter and other properties
	that specify method names to call: