@@ -33,9 +33,11 @@ namespace nedxml {
 using namespace omnetpp::common;
 
 //
-// Validating only if LibXML is at least 2.6.0
+// Validating is supperted only if LibXML is at least 2.6.0
 //
-#if LIBXML_VERSION > 20600
+#if LIBXML_VERSION < 20600
+#error At least libXML2 v2.6 is required for XML DTD validation support.
+#endif
 
 SAXParser::SAXParser()
 {
@@ -251,186 +253,6 @@ int SAXParser::getCurrentLineNumber()
     return nodeLine;
 }
 
-#else
-
-//
-// Old, SAX1-based code, left here as fallback. Doesn't perform DTD validation
-// and attr completion.
-//
-
-static void libxmlStartElementHandler(void *userData, const xmlChar *name, const xmlChar **atts)
-{
-    SAXHandler *sh = (SAXHandler *)userData;
-    sh->startElement((const char *)name, (const char **)atts);
-}
-
-static void libxmlEndElementHandler(void *userData, const xmlChar *name)
-{
-    SAXHandler *sh = (SAXHandler *)userData;
-    sh->endElement((const char *)name);
-}
-
-static void libxmlCharacterDataHandler(void *userData, const xmlChar *s, int len)
-{
-    SAXHandler *sh = (SAXHandler *)userData;
-    sh->characterData((const char *)s, len);
-}
-
-/*
-   static void libxmlProcessingInstructionHandler(void *userData, const xmlChar *target, const xmlChar *data)
-   {
-    SAXHandler *sh = (SAXHandler *)userData;
-    sh->processingInstruction((const char *)target,(const char *)data);
-   }
- */
-
-static void libxmlCommentHandler(void *userData, const xmlChar *data)
-{
-    SAXHandler *sh = (SAXHandler *)userData;
-    sh->comment((const char *)data);
-}
-
-/*
-   static void libxmlStartCdataSectionHandler(void *userData)
-   {
-    SAXHandler *sh = (SAXHandler *)userData;
-    sh->startCdataSection();
-   }
-
-   static void libxmlEndCdataSectionHandler(void *userData)
-   {
-    SAXHandler *sh = (SAXHandler *)userData;
-    sh->endCdataSection();
-   }
- */
-
-static void libxmlWarningHandler(void *userData, const char *msg, ...)
-{
-    va_list args;
-    va_start(args, msg);
-    // g_logv("XML", G_LOG_LEVEL_WARNING, msg, args);
-    // printf(msg, args);
-    va_end(args);
-}
-
-static void libxmlErrorHandler(void *userData, const char *msg, ...)
-{
-    va_list args;
-    va_start(args, msg);
-    // g_logv("XML", G_LOG_LEVEL_CRITICAL, msg, args);
-    // printf(msg, args);
-    va_end(args);
-}
-
-static void libxmlFatalErrorHandler(void *userData, const char *msg, ...)
-{
-    va_list args;
-    va_start(args, msg);
-    // g_logv("XML", G_LOG_LEVEL_ERROR, msg, args);
-    // printf(msg, args);
-    va_end(args);
-}
-
-SAXParser::SAXParser()
-{
-    saxHandler = nullptr;
-}
-
-void SAXParser::setHandler(SAXHandler *sh)
-{
-    saxHandler = sh;
-    sh->setParser(this);
-}
-
-static xmlSAXHandler libxmlSAXParser = {
-    0,  // internalSubset
-    0,  // isStandalone
-    0,  // hasInternalSubset
-    0,  // hasExternalSubset
-    0,  // resolveEntity
-    0,  // getEntity
-    0,  // entityDecl
-    0,  // notationDecl
-    0,  // attributeDecl
-    0,  // elementDecl
-    0,  // unparsedEntityDecl
-    0,  // setDocumentLocator
-    0,  // startDocument
-    0,  // endDocument
-    (startElementSAXFunc)libxmlStartElementHandler,  // startElement
-    (endElementSAXFunc)libxmlEndElementHandler,  // endElement
-    0,  // reference
-    (charactersSAXFunc)libxmlCharacterDataHandler,  // characters
-    0,  // ignorableWhitespace
-    0,  // processingInstruction
-    (commentSAXFunc)libxmlCommentHandler,  // comment
-    (warningSAXFunc)libxmlWarningHandler,  // warning
-    (errorSAXFunc)libxmlErrorHandler,  // error
-    (fatalErrorSAXFunc)libxmlFatalErrorHandler,  // fatalError
-};
-
-static xmlParserCtxtPtr ctxt;
-
-bool SAXParser::parse(const char *filename)
-{
-    LIBXML_TEST_VERSION
-
-        printf("\n*** WARNING: Your LibXML version is too old: " LIBXML_DOTTED_VERSION
-            ". DTD validation and attribute completion is currently OFF. "
-            "Please upgrade to at least version 2.6.0!\n\n");
-
-    FILE *f = fopen(filename, "r");
-    if (!f) {
-        sprintf(errorText, "Cannot open file");
-        return false;
-    }
-
-    ctxt = xmlCreatePushParserCtxt(&libxmlSAXParser, saxHandler, nullptr, 0, nullptr);
-
-    int n;
-    char Buffer[512];
-    while (0 != (n = fread(Buffer, sizeof(char), 512, f))) {
-        xmlParseChunk(ctxt, Buffer, n, 0);
-    }
-
-    xmlParseChunk(ctxt, Buffer, 0, 1);
-
-    bool ok = true;
-    if (!ctxt->wellFormed) {
-        ok = false;
-        sprintf(errorText, "parser error %d at line %d",
-                ctxt->errNo,  // TODO something better
-                ctxt->input->line);
-    }
-
-    if (!ctxt->valid) {
-        ok = false;
-        sprintf(errorText, "validation error %d at line %d",
-                ctxt->errNo,
-                ctxt->input->line);
-    }
-
-    ctxt->sax = nullptr;
-
-    xmlFreeParserCtxt(ctxt);
-    fclose(f);
-
-    return ok;
-}
-
-bool SAXParser::parseContent(const char *xml)
-{
-    sprintf(errorText, "XML parsing of string literals is not supported with "
-                       "this libXML2 version, at least version 2.6.0 is required");
-    return false;
-}
-
-int SAXParser::getCurrentLineNumber()
-{
-    return ctxt->input->line;
-}
-
-#endif
 
 }  // namespace nedxml
 }  // namespace omnetpp
